// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateNav 1`] = `
Array [
  1,
  1.4,
]
`;

exports[`calculateNav 2`] = `
Array [
  1,
  0.6000000000000001,
]
`;

exports[`calculateNav 3`] = `
Array [
  0.8,
  0,
]
`;

exports[`calculateNav 4`] = `
Array [
  1,
  1.5999999999999996,
]
`;

exports[`calculateNav 5`] = `
Array [
  1,
  0.40000000000000036,
]
`;

exports[`calculateNav 6`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav 7`] = `
Array [
  1,
  1.2999999999999998,
]
`;

exports[`calculateNav 8`] = `
Array [
  1,
  0.7000000000000002,
]
`;

exports[`calculateNav 9`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav 10`] = `
Array [
  0.8,
  1.5999999999999996,
]
`;

exports[`calculateNav 11`] = `
Array [
  1.2,
  0.40000000000000036,
]
`;

exports[`calculateNav 12`] = `
Array [
  0.8,
  0,
]
`;

exports[`calculateNav 13`] = `
Array [
  0.8,
  2,
]
`;

exports[`calculateNav 14`] = `
Array [
  1.2000000000000002,
  0,
]
`;

exports[`calculateNav 15`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`calculateNav 16`] = `
Array [
  0.8,
  1.4,
]
`;

exports[`calculateNav 17`] = `
Array [
  1.2,
  0.6000000000000001,
]
`;

exports[`calculateNav 18`] = `
Array [
  0.6000000000000001,
  0,
]
`;

exports[`getLastPriceFromStatus 1`] = `
Object {
  "gdax": Object {
    "price": 616.14,
    "timestamp": 1528081164613,
  },
  "gemini": Object {
    "price": 617.67,
    "timestamp": 1528081767414,
  },
  "kraken": Object {
    "price": 617.85,
    "timestamp": 1528081700549,
  },
}
`;
